--- a/test/index.html
+++ b/test/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>TLite</title>
+    <link rel="stylesheet" href="../tlite.css">
     <style>
       nav {
         margin-bottom: 4em;
