--- a/test/index.html
+++ b/test/index.html
@@ -77,7 +77,7 @@
       }
 
       main {
-        max-width: 550px;
+        width: 550px;
         margin: auto;
         padding: 2em 2em 4em;
       }
@@ -143,6 +143,48 @@
       .code-str {
         color: #BF866E;
       }
+
+      .demo-positioned {
+        position: relative;
+        height: 3em;
+        padding: 1em;
+        border: 1px solid #EEE;
+        background: #F9F9F9;
+      }
+
+      .demo-positioned button {
+        background: steelblue;
+        color: white;
+        padding: 0.25em 0.75em;
+      }
+
+      .demo-float {
+        float: right;
+      }
+
+      .demo-relative {
+        position: relative;
+      }
+
+      .demo-absolute {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+      }
+
+      .demo-fixed {
+        position: fixed;
+        bottom: 1em;
+        left: 1em;
+      }
+
+      .profile-pic-wrapper {
+        display: inline-block;
+      }
+
+      .demo-dynamic {
+        height: 4em;
+      }
     </style>
   </head>
   <body>
@@ -168,17 +210,32 @@
         over the wire.
       </p>
 
-      <pre class="code-sample"><span class="code-comment">// Using es6 syntax, and classList. tlite should work
-// in IE9+, but this sample won't!</span>
-tlite(el => el.classList.contains(<span class="code-str">'tooltip'</span>));</pre>
+      <h3>Dynamic</h3>
 
       <p>
-        That code sample will show tooltips for any elements that have a class of
-        'tooltip'. For more details on how to use tlite, head over to
-        <a href="https://github.com/chrisdavies/tlite" class="tooltip" title="Source Code on GitHub">
-          GitHub
-        </a>.
+        Plays nice with dynamic content.
       </p>
+
+      <div>
+        <nav class="demo-nav demo-dynamic">
+          <button class="tooltip" title="Should Hide">When Removed</button>
+        </nav>
+      </div>
+
+      <h3>Positioned</h3>
+
+      <p>
+        The following elements are absolutely and relatively positioned...
+      </p>
+
+      <div class="demo-positioned">
+        <button class="tooltip demo-fixed" title="Fixed">Fixed</button>
+
+        <button class="tooltip demo-float" title="Float">Float</button>
+        These buttons should be positioned, and tooltips should still show
+        properly... <button class="tooltip demo-absolute" title="Absolute">Absolute</button>
+        <button class="tooltip demo-relative" title="Relative">It's all...</button>
+      </div>
 
       <h3>Multi-directional</h3>
       <p>
@@ -250,7 +307,7 @@ tlite(el => el.classList.contains(<span class="code-str">'tooltip'</span>));</pr
 
       <form class="demo-form">
         <div class="demo-form-group">
-          <span class="tooltip" title="C'est moi!">
+          <span class="tooltip profile-pic-wrapper" title="C'est moi!">
             <img class="profile-pic" src="https://avatars3.githubusercontent.com/u/833377?v=3&s=460" />
           </span>
         </div>
@@ -366,6 +423,17 @@ tlite(el => el.classList.contains(<span class="code-str">'tooltip'</span>));</pr
           })
         })
       }());
+
+      // Adding/removing elements from the dynamic block
+      (function dynamicDemo() {
+        var dynoWrapper = document.querySelector('.demo-dynamic');
+        var html = dynoWrapper.innerHTML;
+
+        setTimeout(function toggle() {
+          dynoWrapper.innerHTML = dynoWrapper.innerHTML.length ? '' : html;
+          setTimeout(toggle, 2000);
+        }, 2000);
+      }())
     </script>
   </body>
 </html>
