Update to test data-tlite fallback

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         max-height: 10em;
         max-width: 10em;
       }
-      
+
       .pic-wrapper {
         display: inline-block;
       }
@@ -159,7 +159,7 @@
         <a href="https://github.com/chrisdavies/tlite" class="tooltip" title="Source Code on GitHub">
           GitHub
         </a>
-        <a href="https://www.npmjs.com/package/tlite" class="tooltip" title="Install via NPM">
+        <a href="https://www.npmjs.com/package/tlite" class="tooltip" data-tlite="Install via NPM">
           Install
         </a>
       </nav>
@@ -300,7 +300,7 @@ tlite(el => el.classList.contains(<span class="code-str">'tooltip'</span>));</pr
       </div>
     </main>
 
-    <script src="tlite.min.js"></script>
+    <script src="tlite.js"></script>
     <script>
 
       // A complex example, showing how you could
